--- a/Employee-Count.ipynb
+++ b/Employee-Count.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "10                                         117.388245   "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e89627ee0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2c894e7e80>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -448,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f2e88a89910>"
+       "<matplotlib.collections.PathCollection at 0x7f2c89539190>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -581,14 +581,93 @@
       "7 Central Oakland 0.8644421272158499\n",
       "8 Ridgemont 0.8392857142857143\n",
       "9 Summer Hill 0.8377862595419847\n",
-      "10 Westwood 0.8289299867899603\n"
+      "10 Westwood 0.8289299867899603\n",
+      "11 South Side Flats 0.8264774044032445\n",
+      "12 Arlington 0.8262773722627738\n",
+      "13 West End 0.825\n",
+      "14 Point Breeze 0.8181431005110733\n",
+      "15 Bloomfield 0.8165948275862069\n",
+      "16 Shadyside 0.8083623693379791\n",
+      "17 East Carnegie 0.8071748878923767\n",
+      "18 Allegheny West 0.8\n",
+      "19 Banksville 0.7972027972027972\n",
+      "20 Perry North 0.796016898008449\n",
+      "21 Bon Air 0.7893258426966292\n",
+      "22 Bluff 0.7883211678832117\n",
+      "23 South Side Slopes 0.7841365461847389\n",
+      "24 Highland Park 0.7818181818181819\n",
+      "25 Regent Square 0.7794432548179872\n",
+      "26 Squirrel Hill North 0.7770290067389394\n",
+      "27 Morningside 0.7726396917148363\n",
+      "28 Duquesne Heights 0.7710638297872341\n",
+      "29 Northview Heights 0.7694174757281553\n",
+      "30 Greenfield 0.7610619469026548\n",
+      "31 Brookline 0.7608442745554262\n",
+      "32 St. Clair 0.7596153846153846\n",
+      "33 Brighton Heights 0.7551396133783369\n",
+      "34 Central Business District 0.7531403604587658\n",
+      "35 Overbrook 0.7515605493133583\n",
+      "36 Sheraden 0.7495107632093934\n",
+      "37 South Oakland 0.7489504617968094\n",
+      "38 Hays 0.7470588235294118\n",
+      "39 Point Breeze North 0.7468230694037146\n",
+      "40 Beechview 0.746134382906944\n",
+      "41 Polish Hill 0.7461139896373057\n",
+      "42 Upper Lawrenceville 0.742472266244057\n",
+      "43 Chartiers City 0.7395348837209302\n",
+      "44 Mount Washington 0.735819209039548\n",
+      "45 Mount Oliver Borough 0.7327905255366395\n",
+      "46 Lower Lawrenceville 0.7316680096696213\n",
+      "47 New Homestead 0.728021978021978\n",
+      "48 Central Northside 0.7256220578345662\n",
+      "49 Central Lawrenceville 0.7246636771300449\n",
+      "50 Swisshelm Park 0.724561403508772\n",
+      "51 Carrick 0.7220417633410673\n",
+      "52 Stanton Heights 0.7188405797101449\n",
+      "53 Marshall-Shadeland 0.717827626918536\n",
+      "54 Troy Hill 0.7150127226463104\n",
+      "55 Knoxville 0.7128647214854111\n",
+      "56 Squirrel Hill South 0.7010696733159872\n",
+      "57 Windgap 0.6924242424242424\n",
+      "58 Spring Garden 0.6884816753926701\n",
+      "59 Lincoln Place 0.6835180055401662\n",
+      "60 East Liberty 0.6834830684174154\n",
+      "61 Crafton Heights 0.6792682926829269\n",
+      "62 Allentown 0.6783831282952548\n",
+      "63 East Allegheny 0.6760242792109257\n",
+      "64 Beltzhoover 0.6743383199079401\n",
+      "65 North Oakland 0.6637139107611548\n",
+      "66 Elliott 0.6378035902851109\n",
+      "67 Manchester 0.635483870967742\n",
+      "68 Allegheny Center 0.6302864938608458\n",
+      "69 West Oakland 0.6266891891891891\n",
+      "70 Hazelwood 0.6130573248407644\n",
+      "71 Homewood North 0.6070588235294118\n",
+      "72 Fineview 0.6064814814814815\n",
+      "73 Upper Hill 0.6047516198704104\n",
+      "74 Oakwood 0.6041666666666666\n",
+      "75 Lincoln-Lemington-Belmar 0.60305745914602\n",
+      "76 Spring Hill-City View 0.6001881467544685\n",
+      "77 Perry South 0.5928439235040098\n",
+      "78 Garfield 0.5796812749003984\n",
+      "79 Arlington Heights 0.5647058823529412\n",
+      "80 California-Kirkbride 0.5429553264604811\n",
+      "81 Homewood West 0.541371158392435\n",
+      "82 Terrace Village 0.5333333333333333\n",
+      "83 Homewood South 0.5330316742081448\n",
+      "84 East Hills 0.5222641509433962\n",
+      "85 Middle Hill 0.5210176991150443\n",
+      "86 Larimer 0.49393939393939396\n",
+      "87 Bedford Dwellings 0.4298245614035088\n",
+      "88 Crawford-Roberts 0.4293193717277487\n",
+      "89 Glen Hazel 0.33070866141732286\n"
      ]
     }
    ],
    "source": [
     "ratioTable  = {k: l for k, l in sorted(ratioTable.items(), key = lambda l: l[1],reverse = True )}\n",
     "\n",
-    "for i in range(10):\n",
+    "for i in range(89):\n",
     "    name=list(ratioTable)[i]\n",
     "    print(str(i+1) + \" \" +  name + \" \" + str(ratioTable.get(name)))"
    ]
@@ -632,7 +711,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My personal favorite neighborhood in Pittsburgh is Brookline. Brookline has a employee to population rate of 0.76 and is ranked 31 out of the 89 neighborhoods. Brookline is nowhere near Fairywood in terms of the ranking and is probably not the best at anything, but I spent a small portion of my childhood living there, and I can only think of all the good moments and people I met while living there. "
+   ]
   }
  ],
  "metadata": {
