--- a/Final-Report.ipynb
+++ b/Final-Report.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "## Household Income Metric\n",
     "\n",
-    "### Here are the top neighborhoods with the highest average household income:\n",
+    "### Top 10 neighborhoods with the highest average household income:\n",
     "\n",
     "##### 1.  <span style =\"color:green\">St. Clair: $176,419</span> \n",
     "\n",
@@ -145,7 +145,7 @@
    "source": [
     "## Neighborhood Parks Metric\n",
     "\n",
-    "### Here are the top neighborhoods with the most parks:\n",
+    "### Top 10 neighborhoods with the most parks:\n",
     "\n",
     "##### 1. <span style =\"color:green\">East Liberty: 12 parks</span> \n",
     "\n",
