--- a/Parks-Count.ipynb
+++ b/Parks-Count.ipynb
@@ -537,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the number of parks, the best neighborhood ultimately lands on East Liberty. My favorite neighborhood in Pittsburgh is Mount Washington. Mount Washington offers stunning views of the Pittsburgh city skyline, the three rivers, and the surrounding hills. It also provides the Monongahela and Duquesne Inclines, two historic cable cars that transport visitors up and down the steep hillsides, contributing to the neighborhood's charm and character. Mount Washington has six parks, landing it 9th out of 73 neighborhoods. Ultimately, the best neighborhood is subjective and depends on individual preferences and priorities. In comparison, data-driven analysis can provide valuable insights."
+    "Based on the number of parks, the best neighborhood ultimately lands on East Liberty. My favorite neighborhood in Pittsburgh is Mount Washington. Mount Washington offers stunning views of the Pittsburgh city skyline, the three rivers, and the surrounding hills. It also provides the Monongahela and Duquesne Inclines, two historic cable cars that transport visitors up and down the steep hillsides, contributing to the neighborhood's charm and character. Mount Washington has six parks, landing it within the top 10 out of 73 neighborhoods. Ultimately, the best neighborhood is subjective and depends on individual preferences and priorities. In comparison, data-driven analysis can provide valuable insights."
    ]
   }
  ],
