--- a/Wealth.ipynb
+++ b/Wealth.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now I will calculate and display a histogram of the average household income in each neighborhood. This will aloow me to get a good judgement on the spread of wealth in different areas."
+    "Now I will calculate and display a histogram of the average household income in each neighborhood. This will allow me to get a good judgement on the spread of wealth in different areas."
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this, most of the neighborhoods have an average income of less than $50,000. From this graph, I wanted to take a look at the top 20 neighborhoods by income to see what the exact incomes are."
+    "From this, I wanted to take a look at the neighborhoods with at least $60,000+ average income. This is because from the histogram, the neighborhoods with $60,000+ accounts for about the top 25% of neighborhoods, so I thought that was a good number.
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: We decided overall that Squirrel Hill South is the best neighborhood with all of our metrics. However, persoanlly, my favorite neighborhood is Shadyshide. My parents own a business there and we spend a decent amount of time there. I think it's a really nice area overall, there are a lot of businesses and restaurants and overall it's a good time."
+    "Conclusion: We decided overall that South Side Flats is the best neighborhood with all of our metrics. However, persoanlly, my favorite neighborhood is Shadyshide. My parents own a business there and we spend a decent amount of time there. I think it's a really nice area, there are a lot of businesses and restaurants and it's a good time."
    ]
   },
   {
