--- a/Wealth.ipynb
+++ b/Wealth.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this, I wanted to take a look at the neighborhoods with at least $60,000+ average income. This is because from the histogram, the neighborhoods with $60,000+ accounts for about the top 25% of neighborhoods, so I thought that was a good number.
+    "From this, I wanted to take a look at the neighborhoods with at least 60,000 or more average income. This is because from the histogram, the neighborhoods with 60,000 or more account for about the top 25 percent of neighborhoods, so I thought that was a good number.
    ]
   },
   {
