--- a/Wealth.ipynb
+++ b/Wealth.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metric: I will be using a data set from the WPRDC to get the average wealth in different neighborhoods. These files include the total income of everyone in the neighborhood in a year, as well as the number of people in the neighborhood."
+    "Metric: I will be using a data set from the WPRDC to get the average income per person in different neighborhoods. These files include the total income of everyone in the neighborhood in a year, as well as the number of people in the neighborhood."
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this, I wanted to take a look at the neighborhoods with at least 60,000 or more average income. This is because from the histogram, the neighborhoods with 60,000 or more account for about the top 25 percent of neighborhoods, so I thought that was a good number.
+    "From this, I saw that this is a pretty big dropoff after 60,000 dollars. I wanted to then take a look at the top 20 neighborhoods because that's about the number of areas with incomes above 60,000 dollars, and it's also about the top 25%."
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: We decided overall that South Side Flats is the best neighborhood with all of our metrics. However, persoanlly, my favorite neighborhood is Shadyshide. My parents own a business there and we spend a decent amount of time there. I think it's a really nice area, there are a lot of businesses and restaurants and it's a good time."
+    "Conclusion: We decided overall that South Side Flats is the best neighborhood with all of our metrics. However, my favorite neighborhood is Shadyshide. My parents own a business there and we spend a decent amount of time there. I think it's a really nice area, there are a lot of businesses and restaurants and it's a good time."
    ]
   },
   {
